--- a/md/2-2-3.md
+++ b/md/2-2-3.md
@@ -1,7 +1,7 @@
 역 슬래쉬(\)가 사용되는 문자를 이스케이프 문자(escape character)라고 부릅니다.
 
-💠 \'   =>   ' 작은 따옴표
-💠 \"   =>   " 큰 따옴표
-💠 \\   =>   역 슬래쉬
-💠 \n   =>   줄바꿈 (새로운 줄에서 시작)
+💠 \'   =>   ' 작은 따옴표 <br>
+💠 \"   =>   " 큰 따옴표 <br>
+💠 \\   =>   역 슬래쉬 <br>
+💠 \n   =>   줄바꿈 (새로운 줄에서 시작) <br>s
 💠 \t   =>   탭 (탭 키를 누른 효과)
