--- a/md/2-2-3.md
+++ b/md/2-2-3.md
@@ -3,5 +3,5 @@
 💠 \'   =>   ' 작은 따옴표 <br>
 💠 \"   =>   " 큰 따옴표 <br>
 💠 \\   =>   역 슬래쉬 <br>
-💠 \n   =>   줄바꿈 (새로운 줄에서 시작) <br>s
+💠 \n   =>   줄바꿈 (새로운 줄에서 시작) <br>
 💠 \t   =>   탭 (탭 키를 누른 효과)
