--- a/md/2-3-1.md
+++ b/md/2-3-1.md
@@ -1,9 +1,10 @@
 산술 연산자의 종류
-+ 덧셈
-- 뺄셈
-* 곱셈
-/ 나눗셈
-% 나머지 계산
-** 거듭제곱 계산
-++ 1증가
--- 1감소
+
+💠 +   =>  덧셈
+💠 -   =>  뺄셈
+💠 *   =>  곱셈
+💠 /   =>  나눗셈
+💠 %   =>  나머지 계산
+💠 **  =>  거듭제곱 계산
+💠 ++  =>  1증가
+💠 --  =>  1감소
