--- a/md/2-3-1.md
+++ b/md/2-3-1.md
@@ -1,10 +1,10 @@
 산술 연산자의 종류
 
-💠 +   =>  덧셈
-💠 -   =>  뺄셈
-💠 *   =>  곱셈
-💠 /   =>  나눗셈
-💠 %   =>  나머지 계산
-💠 **  =>  거듭제곱 계산
-💠 ++  =>  1증가
+💠 +   =>  덧셈 <br>
+💠 -   =>  뺄셈 <br>
+💠 *   =>  곱셈 <br>
+💠 /   =>  나눗셈 <br>
+💠 %   =>  나머지 계산 <br>
+💠 **  =>  거듭제곱 계산 <br>
+💠 ++  =>  1증가 <br>
 💠 --  =>  1감소
