--- a/md/2-3-3.md
+++ b/md/2-3-3.md
@@ -1,9 +1,11 @@
 자바스크립트 할당(assignment) 연산자는 데이터나 변수 값을 변수에 저장, 즉 메모리 공간에 할당하는 역할을 수행합니다.
 
 할당 연산자의 종류
-| 할당연산자 | 예      | 동일한 표현      | 설명 |
-| ----- | --- | ------ | ----------- |
-| =          | x=2    |              | 2를 변수 x에 할당            |
-|            |        |              |                        |
-|            |        |              |                        |
-|            |        |              |                        |
+| 할당연산자  | 예       | 동일한 표현                         | 설명 |
+| ----- | ------ | ------- | ------------------------------ |
+| =          | x = 2        |                | 2를 변수 x에 할당                                                  |
+| +=         | x += 2       | x = x+2        | 현재 x의 값에 2를 더해서 얻은 값을 다시 x에 할당                               |
+| -=         | x -= 2       | x = x-2        | 현재 x의 값에 2를 빼서 얻은 값을 다시 x에 할당                                |
+| *=         | x *= 2       | x = x*2        | 현재 x의 값에 2를 곱해서 얻은 값을 다시 x에 할당                               |
+| /=         | x /= 2       | x = x/2        | 현재 x의 값에 2로 나누어서 얻은 값을 다시 x에 할당                               |
+| %=         | x %= 2       | x = x%2        | 현재 x의 값에 2로 나눈 나머지를 다시 x에 할당                               |
