--- a/md/2-3-5.md
+++ b/md/2-3-5.md
@@ -4,5 +4,5 @@
 | 논리 연산자 | 연산                                                   | 설명 |
 | ------ | --- | ---------------------------------------------------- |
 | &&           | AND    | 두 조건이 모두 true일 경우에만 최종 결과가 true가 됨                                                                       |
-| ||           | OR     | 두 조건 중 하나만 true가 되어도 최종결과는 true가 됨                                                                       |
+| &&           | AND    | 두 조건이 모두 true일 경우에만 최종 결과가 true가 됨                                                                       |
 | !            | NOT    | 결과가 true인 경우에는 false로 변경하고 반대로 false인 경우에는 true로 변경함                                                     |
