--- a/md/2-3-5.md
+++ b/md/2-3-5.md
@@ -1,8 +1,29 @@
 논리 연산자는 IF문, For문, While문에서 많이 사용됩니다.
 
 논리 연산자의 종류
-| 논리 연산자 | 연산                                                   | 설명 |
-| ------ | --- | ---------------------------------------------------- |
-| &&           | AND    | 두 조건이 모두 true일 경우에만 최종 결과가 true가 됨                                                                       |
-|            | OR    | 두 조건중 하나만 true가 되어도 최종 결과는 true가 됨                                                                       |
-| !            | NOT    | 결과가 true인 경우에는 false로 변경하고 반대로 false인 경우에는 true로 변경함                                                     |
+<table>
+<thead>
+<tr>
+<th>논리 연산자</th>
+<th>연산</th>
+<th>설명</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>&&</td>
+<td>AND</td>
+<td>두 조건이 모두 true일 경우에만 최종 결과가 true가 됨</td>
+</tr>
+<tr>
+<td>||</td>
+<td>OR</td>
+<td>두 조건중 하나만 true가 되어도 최종 결과는 true가 됨</td>
+</tr>
+<tr>
+<td>!</td>
+<td>NOT</td>
+<td>결과가 true인 경우에는 false로 변경하고 반대로 false인 경우에는 true로 변경함</td>
+</tr>
+</tbody>
+</table>
