--- a/md/3-4-1.md
+++ b/md/3-4-1.md
@@ -12,6 +12,7 @@ while i < 5:
     print(i)
     i += 1
 
+<br>
 
 💠for문
 반복 가능한 객체 기반 반복: for문은 반복 가능한 객체(리스트, 튜플, 문자열 등)의 요소를 하나씩 순회하면서 실행됩니다.
@@ -23,8 +24,9 @@ ex)
 for i in range(5):
     print(i)
 
+<br>
 
-❇️ 차이점 요약
-✔️ 조건 기반 vs 범위 기반: while은 조건이 참일 때 계속 반복되고, for는 미리 정의된 반복 가능한 객체나 범위를 순회합니다.
-✔️ 종료 시점: while문은 조건에 따라 종료 시점이 유동적이고, for문은 반복할 요소가 끝날 때까지 반복합니다.
+❇️ 차이점 요약 <br>
+✔️ 조건 기반 vs 범위 기반: while은 조건이 참일 때 계속 반복되고, for는 미리 정의된 반복 가능한 객체나 범위를 순회합니다. <br>
+✔️ 종료 시점: while문은 조건에 따라 종료 시점이 유동적이고, for문은 반복할 요소가 끝날 때까지 반복합니다. <br>
 ✔️ 사용 상황: while은 조건에 따라 종료 시점이 불확실하거나 무한 루프가 필요할 때 유용하며, for는 반복 횟수가 정해져 있거나 순회할 대상이 있을 때 적합합니다.
