--- a/md/3-4-1.md
+++ b/md/3-4-1.md
@@ -5,25 +5,25 @@
 💠while문
 조건 기반 반복: while문은 특정 조건이 True인 동안 계속해서 반복됩니다.
 
-while 조건:
+while 조건: <br> 
     # 실행할 코드
 
 ex)
-i = 0
-while i < 5:
-    print(i)
-    i += 1
+i = 0 <br> 
+while i < 5: <br> 
+    print(i) <br> 
+    i += 1 
 
 <br>
 
 💠for문
 반복 가능한 객체 기반 반복: for문은 반복 가능한 객체(리스트, 튜플, 문자열 등)의 요소를 하나씩 순회하면서 실행됩니다.
 
-for 변수 in 반복가능한객체:
+for 변수 in 반복가능한객체: <br> 
     # 실행할 코드
 
 ex)
-for i in range(5):
+for i in range(5): <br> 
     print(i)
 
 <br>
