--- a/md/4-6.md
+++ b/md/4-6.md
@@ -1,9 +1,9 @@
 ❇️ 예외 처리 방법
 예외처리를 하는 데에는 try, catch, finally를 조합해서 사용한다.
 
-try{
-// 테스트할 문장
-}
-catch(err){
-// 오류 처리 문장
+try{ <br>
+// 테스트할 문장 <br>
+}v<br>
+catch(err) {<br>
+// 오류 처리 문장<br>
 }
