--- a/md/7-1.md
+++ b/md/7-1.md
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td>slice(start, end)</td>
-      <td>slice()는 문자 시작 위치와 끝 위치를 기준으로 문자열을 추출함.<br>인덱스 start부터 인덱스 end-1까지의 문자열을 추출함</td>
+      <td>slice()는 문자 시작 위치와 끝 위치를 기준으로 문자열을 추출함<br>인덱스 start부터 인덱스 end-1까지의 문자열을 추출함</td>
     </tr>
     <tr>
       <td>substr(start, length)</td>
