--- a/md/9-3-5.md
+++ b/md/9-3-5.md
@@ -5,9 +5,9 @@ array.forEach(function(element, index, array) {
 // 실행할 코드
 });
 
-element → 현재 요소(배열 값)
-index → 현재 요소의 인덱스 (0부터 시작)
-array → forEach()를 호출한 원본 배열 (잘 안 쓰임)
+element → 현재 요소(배열 값) <br>
+index → 현재 요소의 인덱스 (0부터 시작) <br>
+array → forEach()를 호출한 원본 배열 (잘 안 쓰임) <br>
 
 🔥예제로 확인해보기
 
