--- a/md/9-3-6.md
+++ b/md/9-3-6.md
@@ -25,3 +25,15 @@
     </tr>
   </tbody>
 </table>
+
+<br>
+
+const nums = [1, 2, 3];
+
+// ❌ forEach는 return 안 됨
+const result1 = nums.forEach(num => num \* 2);
+console.log(result1); // undefined
+
+// ✅ map은 return된 값들을 모아 새 배열 생성
+const result2 = nums.map(num => num \* 2);
+console.log(result2); // [2, 4, 6]
